# vibecheck

./: .env.example  .gitignore  CLAUDE.md  README.md  VIBECHECK.md
backend/: db.py  main.py  mcp_server.py  pyproject.toml
backend/models/: __init__.py  session.py
backend/routers/: analytics.py  codebase.py  handoff.py  health.py  insights.py  multi_repo.py  quiz.py  results.py  sessions.py
backend/schemas/: session.py
backend/services/: analytics_service.py  claude_service.py  codebase_service.py  context_rot_service.py  handoff_service.py  insights_service.py  multi_repo_service.py  quiz_engine.py  self_brief_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: sessions.ts
frontend/src/pages/: Analytics.tsx  CodebaseMap.tsx  Home.tsx  Insights.tsx  MultiRepo.tsx  MultiRepoComponents.tsx  NewSession.tsx  Quiz.tsx  Results.tsx  SelfBrief.tsx  SelfBriefComponents.tsx  SessionDetail.tsx  SessionHealth.tsx
hooks/: session_end.py
